--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "encounter",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
+    "node-sass": "^5.0.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
