--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
     "bootstrap": "^4.6.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "node-sass": "^5.0.0",
     "popper.js": "^1.16.1",
